Change Winget Releaser job to `ubuntu-latest` (#428)

--- a/.github/workflows/post_release.yml
+++ b/.github/workflows/post_release.yml
@@ -22,7 +22,7 @@ jobs:
 
   winget:
     name: Publish to WinGet
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: vedantmgoyal2009/winget-releaser@v2
         with:
