--- a/.github/ISSUE_TEMPLATE/1-bug.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug.yml
@@ -33,7 +33,7 @@ body:
   - type: textarea
     attributes:
       label: Debug Information
-      description: Menu: Help > Debug Information
+      description: 'Menu: Help > Debug Information'
   - type: textarea
     attributes:
       label: Additional Details
