--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-22.04, windows-latest, macos-latest]
-        qt_version: ["6.5"]
+        qt_version: ["6.5", "6.8", "6.9"]
 
     runs-on: ${{ matrix.os }}
 
@@ -53,7 +53,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           echo "DISTRIBUTION=AppImage" >> "$GITHUB_ENV"
-          sudo apt-get install libxkbcommon-dev libxkbcommon-x11-0 fuse libxcb-cursor-dev
+          sudo apt-get install libxkbcommon-dev libxkbcommon-x11-0 fuse libxcb-cursor-dev libcups2-dev
 
       - name: Run QMake
         run: |
