Fix Qt 5 compatibility (#782)

--- a/.gitignore
+++ b/.gitignore
@@ -48,5 +48,14 @@ CMakeLists.txt.user*
 *.pyc
 
 /build
+/build*
 /icon/*.png
 /icon/ImageMagick
+
+# JetBrains IDE prefs
+.idea/
+
+# macOS annoyances
+.DS_Store
+*DS_Store
+._*
