--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,12 @@ jobs:
           cd build
           jom package
 
+      - name: Install NSIS
+        if: runner.os == 'Windows'
+        uses: repolevedavaj/install-nsis@v1.0.3
+        with:
+          nsis-version: '3.11'
+
       - name: Create Windows Installer
         if: runner.os == 'Windows'
         run: |
